# robot_arm_ws

./: README.md
install/: local_setup.sh  setup.sh
install/robot_arm_description/share/robot_arm_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_arm_description/share/robot_arm_description/cmake/: robot_arm_descriptionConfig-version.cmake  robot_arm_descriptionConfig.cmake
install/robot_arm_description/share/robot_arm_description/config/: robot_arm.rviz
install/robot_arm_description/share/robot_arm_description/environment/: ament_prefix_path.dsv  path.dsv
install/robot_arm_description/share/robot_arm_description/launch/: display.launch.py
install/robot_arm_description/share/robot_arm_description/meshes/: base_plate.stl  basement.stl  claw_support.stl  forward_drive_arm.stl  horizontal_arm.stl  left_finger.stl  link.stl  (+6 more)
install/robot_arm_moveit_config/share/robot_arm_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/robot_arm_description/: CMakeLists.txt
src/robot_arm_description/config/: robot_arm.rviz
src/robot_arm_description/launch/: display.launch.py
src/robot_arm_description/urdf/: robot_arm.urdf.xacro  robot_arm_expanded.urdf
src/robot_arm_moveit_config/: CMakeLists.txt  package.xml
src/robot_arm_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  robot_arm.srdf
src/robot_arm_moveit_config/launch/: demo.launch.py
(+17 files in other folders)
